--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "micropub-helper",
-  "version": "1.3.11",
-  "description": "A simple helper class for creating micropub clients",
+  "name": "indieauth-authentication",
+  "version": "0.0.1",
+  "description": "A helper class for creating apps that authenticate via IndieAuth",
   "keywords": [
-    "micropub",
+    "indieauth",
     "indieweb"
   ],
-  "homepage": "https://github.com/grantcodes/micropub",
-  "bugs": "https://github.com/grantcodes/micropub/issues",
+  "homepage": "https://git.schmarty.net/schmarty/indieauth-authentication",
+  "bugs": "https://git.schmarty.net/schmarty/indieauth-authentication/issues",
   "main": "./dist/main.js",
   "browser": {
     "main": "./src/main.js",
@@ -17,7 +17,7 @@
     "isomorphic-fetch": false,
     "form-data": false
   },
-  "author": "Grant Richmond <mail@grant.codes> (https://grant.codes)",
+  "author": "Marty McGuire <marty@martymcgui.re> (https://martymcgui.re)",
   "license": "MIT",
   "dependencies": {
     "form-data": "^2.3.2",
@@ -26,12 +26,15 @@
     "qs": "^6.5.2"
   },
   "scripts": {
-    "prepublish": "BABEL_ENV=production babel ./src -d ./dist"
+    "prepublish": "BABEL_ENV=production babel ./src -d ./dist",
+    "test": "mocha --require babel-core/register --require babel-polyfill"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.7.0"
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "mocha": "^5.2.0"
   },
   "babel": {
     "presets": [
